--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
     jpa:
       repositories:
         enabled: true
-
+server:
+  contextPath: /api
 flyway:
   locations:
     - classpath:/db/migration
