--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://zrobmy.waw.pl/api"
+  "proxy": "http://zrobmy.waw.pl"
 }
