--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>pl.waw</groupId>
-	<artifactId>zrobmy</artifactId>
+	<artifactId>lokalsi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Zrobmy w Warszawie</name>
+	<name>Lokalsi</name>
 	<description></description>
 
 	<parent>
