--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  http:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     url: jdbc:h2:file:./lokalsi
     username: lokalsi
@@ -17,5 +21,4 @@ server:
 flyway:
   locations:
     - classpath:/db/migration
-
 
