--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,3 +1,3 @@
 budgetProposals:
-  templatePath: /Users/konrad/workspaces/wawcode/app.twojbudzet.um.warszawa.pl/template.html
-  targetPath: /Users/konrad/workspaces/wawcode/app.twojbudzet.um.warszawa.pl/result.html
+  templateDir: /Users/konrad/workspaces/wawcode/app.twojbudzet.um.warszawa.pl
+  targetFilePath: /Users/konrad/workspaces/wawcode/app.twojbudzet.um.warszawa.pl/projekty2d18.html
