--- a/backend/src/main/resources/application-cloud.yml
+++ b/backend/src/main/resources/application-cloud.yml
@@ -1,3 +1,2 @@
 budgetProposals:
-  templateDir: /var/www/app.twojbudzet.um.warszawa.pl
-  targetFilePath: /Users/konrad/workspaces/wawcode/app.twojbudzet.um.warszawa.pl/projekty2d18.html
+  targetFilePath: /var/www/app.twojbudzet.um.warszawa.pl/projekty2d18.html
